Update 'java-springboot-sdaklzrj' component image to: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/java-springboot-sdaklzrj:6b4196166e9e02c17a85fdd74228887e24688cf4@sha256:5f3e907c358d9c3782bcbf6043dec7ae06cf3d049bd57e7c7684aaddf24bf463

--- a/components/java-springboot-sdaklzrj/overlays/development/deployment-patch.yaml
+++ b/components/java-springboot-sdaklzrj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-springboot-sdaklzrj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/java-springboot-sdaklzrj:6b4196166e9e02c17a85fdd74228887e24688cf4@sha256:5f3e907c358d9c3782bcbf6043dec7ae06cf3d049bd57e7c7684aaddf24bf463
+          name: container-image
